changes based on feedback

--- a/src/ui/pendota.html
+++ b/src/ui/pendota.html
@@ -17,7 +17,7 @@
               <div id="_pendota-lock-icon_" class="_pendota-icon-locked_">
                 <i class="_pendota-feather-locked_" data-feather="unlock"></i>
               </div>
-              <div id="_pendota_lock-message_">Click anywhere to Lock.</div>
+              <div id="_pendota_lock-message_"></div>
             </div>
           </td>
         </tr>
@@ -33,26 +33,26 @@
                 <div id="_pendota-tag-builder-placeholder_">Click [+] to start building a tag</div>
               </div>
               <form id="_pendota-sizzler-form_" class="_pendota-hidden_"><textarea no-drag class="_pendota_form-control_"
-                  type="text" id="_pendota-sizzler_" value="" autocomplete="off" placeholder="Type a selector..."></textarea>
+                  type="text" id="_pendota-sizzler_" value="" autocomplete="off" placeholder="Type your own tag..."></textarea>
               </form>
             </div>
           <td width="12%">
-            <div id="_pendota-sizzler-count_"> -- </div>
+            <a no-drag href="javascript:void(0);" id="_pendota-sizzler-btn_" class="_pendota-text-button_ _pendota-tag-builder-button_" title="Test tag"><span
+              id="_pendota-sizzler-icon_" class="_pendota-text-button-inner_">TEST</span>
           </td>
           <td width="12%">
-            <a href="javascript:void(0);" id="_pendota-sizzler-btn_" class="_pendota-button_ _pendota-tag-builder-button_" title="Test tag"><i
-              id="_pendota-sizzler-icon_" class="_pendota-button-icon_" data-feather="play-circle"></i>
+            <div id="_pendota-sizzler-count_" title="Number of matches"></div>
           </td>
           </td>
         </tr>
         <tr id="_pendota-tag-builder-buttons_">
           <td width="12%">
-            <a href="javascript:void(0);" id="_pendota-free-text-btn_" class="_pendota-button_ _pendota-tag-builder-button_"
+            <a no-drag href="javascript:void(0);" id="_pendota-free-text-btn_" class="_pendota-button_ _pendota-tag-builder-button_"
               title="Free text"><i id="_pendota-free-text-icon_" class="_pendota-button-icon_"
                 data-feather="type"></i></a>
           </td>
           <td width="12%">
-            <a href="javascript:void(0);" id="_pendota-tag-builder-copy-btn_" class="_pendota-button_ _pendota-tag-builder-button_"
+            <a no-drag href="javascript:void(0);" id="_pendota-tag-builder-copy-btn_" class="_pendota-button_ _pendota-tag-builder-button_"
               title="Copy tag to clipboard"><i id="_pendota-tag-builder-copy-icon_" class="_pendota-button-icon_"
                 data-feather="copy"></i></a>
           </td>
