UX and guidance changes

--- a/src/ui/pendota.html
+++ b/src/ui/pendota.html
@@ -28,12 +28,13 @@
         <tr height="32px">
           <td width="76%" rowspan="2">
             <div id="_pendota-tag-builder_" data-freetext-mode="off">
+              <a nodrag id="_pendota-tag-builder-clear-btn_" class="_pendota-button_ _pendota-tag-builder-button_"><i id="_pendota-tag-builder-clear-icon_"  class="_pendota-button-icon_" data-feather="x-circle"></i></a>
               <div id="_pendota-tag-builder-non-freetext_">
                 <div id="_pendota-auto-tags_"></div>
-                <div id="_pendota-tag-builder-placeholder_">Click [+] to start building a tag</div>
+                <div id="_pendota-tag-builder-placeholder_">Build a tag here...</div>
               </div>
               <form id="_pendota-sizzler-form_" class="_pendota-hidden_"><textarea no-drag class="_pendota_form-control_"
-                  type="text" id="_pendota-sizzler_" value="" autocomplete="off" placeholder="Type your own tag..."></textarea>
+                  type="text" id="_pendota-sizzler_" value="" autocomplete="off" spellcheck="false" placeholder="Type your own tag..."></textarea>
               </form>
             </div>
           <td width="12%">
