--- a/src/ui/pendota.html
+++ b/src/ui/pendota.html
@@ -14,7 +14,7 @@
         <tr>
           <td>
             <div id = "_pendota-status_">
-              <div id="_pendota-lock-icon_" class="_pendota-icon-locked_">
+              <div no-drag id="_pendota-lock-icon_" class="_pendota-icon-locked_">
                 <i class="_pendota-feather-locked_" data-feather="unlock"></i>
               </div>
               <div id="_pendota_lock-message_"></div>
